<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <!-- Package Information -->
  <name>voro_swarm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dasol@todo.todo">dasol</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build Tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependency -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Test Dependency -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
